add auth routes and jwt swagger validation
