# services/PlatformsService.go
@@ -14,6 +14,7 @@ import (
 // @Produce  json
 // @Success 200 {object} []models.Platforms
 // @Router /platforms [get]
+// @Security Bearer
 func GetPlatforms(c *gin.Context) {
 	database := db.GetDatabase()
 	var platforms []models.Platforms
@@ -40,6 +41,7 @@ func GetPlatforms(c *gin.Context) {
 // @Success 200 {object} models.Platforms
 // @Router /platforms [POST]
 // @Param platform body models.Platforms true "Tag"
+// @Security Bearer
 func CreatePlatform(c *gin.Context) {
 	database := db.GetDatabase()
 	var platform models.Platforms
@@ -48,7 +50,7 @@ func CreatePlatform(c *gin.Context) {
 	if parsing == nil {
 		return
 	}
-	
+
 	checkPlatformExists := database.Where("name = ?", platform.Name).First(&platform)
 	if checkPlatformExists.RowsAffected > 0 {
 		c.JSON(400, gin.H{
@@ -79,6 +81,7 @@ func CreatePlatform(c *gin.Context) {
 // @Success 200 {object} models.Platforms
 // @Router /platforms/{id} [DELETE]
 // @Param id path string true "Platform ID"
+// @Security Bearer
 func DeletePlatform(c *gin.Context) {
 	database := db.GetDatabase()
 	var platform models.Platforms
